# cc-safe-stack

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .mcp.json  .pre-commit-config.yaml  .prettierrc  .textlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION.md  PLANS.md  README.md  SIMPLIFICATION_PLAN.md  TUTORIAL.md  compose.yml  docker-compose.marimo.yml  docker-compose.sh  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.devcontainer/: devcontainer.json  devcontainer.local.json.clean-sample  devcontainer.local.json.clean-yfinance  devcontainer.local.json.sample  devcontainer.local.jsonc.gcloud-powershell  devcontainer.local.jsonc.sample  devcontainer.local.jsonc.yfinance-example
.devcontainer/scripts/: load-local-env.sh  postCreateCommand.sh  postStartCommand.sh  setup-python.sh
.devcontainer/secure/: devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
apps/backend/: main.py  pyproject.toml
apps/frontend/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.css  App.integration.test.tsx  App.test.tsx  App.tsx  index.css
apps/frontend/src/mocks/: handlers.ts
backend/: main.py  pyproject.toml
backend/tests/: test_main.py
dashboard/: api-docs.html  index.html  utilities.html  welcome.html
dashboard/assets/: dashboard.js  styles.css
docker/: .zshrc  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.frontend  entrypoint-dev.sh  entrypoint-frontend.sh
docs/: README.md  TUTORIAL.md
docs/development/: api-development.md  architecture.md
docs/environment/: devcontainer.md  docker.md  mcp-servers.md  security.md
docs/extensions/: marimo.md
docs/getting-started/: installation.md
docs/guides/: contributing.md
examples/python-sample/: main.py
extensions/marimo/: app.py
frontend/: eslint.config.mjs  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.integration.test.tsx  App.test.tsx  App.tsx  setupTests.ts
frontend/src/mocks/: handlers.ts
scripts/: allow-additional-domain.sh  build.sh  clean.sh  dev-all.sh  dev-docker.sh  dev-marimo.sh  dev.sh  disable-marimo.sh  docker-dashboard-down.sh  docker-dashboard.sh  docker-dev-connect.sh  docker-marimo.sh  enable-marimo.sh  format.sh  lint-fix.sh  lint.sh  setup-docker-dev.sh  setup.sh  test.sh  verify-setup.sh
shared/types/: api.ts
specs/: README.md
specs/examples/: stock-analysis-platform.spec.md  todo-app.spec.md
specs/templates/agent/: claude-code-contract.md  prompt-templates.md
specs/templates/mvd/: acceptance-criteria.feature  api-spec.yaml  prd.md  project-charter.md  user-story.md
src/my_package/: __init__.py
streamlit/: app.py  requirements.txt
streamlit/pages/: 1_📝_Todo_Manager.py  2_📊_Dashboard.py  3_🔍_API_Explorer.py
tests/: test_hello.py
