[project]
name = "backend"
version = "0.2.0"
description = "Backend API for full-stack application"
readme = "../../README.md"
authors = [{ name = "Developer", email = "developer@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "marimo>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.11.12",
    "mypy>=1.7.0",
]
marimo-extensions = [
    # データ分析・可視化などmarimo拡張が必要な場合に追加
    "duckdb>=1.0.0",
    "polars>=1.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dotenv", "dotenv.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "pydantic", "pydantic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fastapi.testclient"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["main"]
ignore_errors = true
